--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==2.0.0
-pandas
-scikit-learn==0.20.3
-pylint
-pytest
-locust
-joblib
+pylint==2.15.0
+pytest==7.1.3
+Flask==2.2.2
+pandas==0.24.2
+scikit-learn==0.20.4
+joblib==1.1.0
+locust==2.12.0
